# qt_SimplePaintApp

./: CMakeLists.txt  README.md  main.cpp  paint.cpp  paint.h  paint.ui  painter.cpp  painter.h  res.qrc
